unpackaged/main/default/objects/Contact_Title_Map__c/Contact_Title_Map__c.object-meta.xml
<CustomObject>
    <label>Contact Title Map</label>
    <nameField>
        <label>Contact Title Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Title Maps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>