unpackaged/main/default/objects/Contact_Title_Map__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Function</valueSetName>
    </valueSet>
</CustomField>