unpackaged/main/default/objects/Contact_Title_Map__c/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <label>Seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Seniority</valueSetName>
    </valueSet>
</CustomField>