unpackaged/main/default/objects/Contact_Title_Map__c/validationRules/name_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>name_unique</fullName>
    <active>false</active>
    <errorConditionFormula>VLOOKUP($ObjectType.Contact_Title_Map__c.Fields.Name,$ObjectType.Contact_Title_Map__c.Fields.Name,Name)=Name &amp;&amp; (ISNEW() || ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Name must be unique</errorMessage>
</ValidationRule>