unpackaged/main/default/objects/Contact_Title_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Function__c</columns>
    <columns>Priority__c</columns>
    <columns>Seniority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>